ARM: dts: sun8i: add OTG function to Lichee Pi Zero
Lichee Pi Zero features a USB OTG port.

Add support for it.

Note: in order to use the Host mode, the board must be powered via the
+5V and GND pins.

Signed-off-by: Icenowy Zheng <icenowy@aosc.xyz>

--- a/arch/arm/boot/dts/sun8i-v3s-licheepi-zero.dts
+++ b/arch/arm/boot/dts/sun8i-v3s-licheepi-zero.dts
@@ -71,3 +71,13 @@
 	pinctrl-names = "default";
 	status = "okay";
 };
+
+&usb_otg {
+	dr_mode = "otg";
+	status = "okay";
+};
+
+&usbphy {
+	usb0_id_det-gpio = <&pio 5 6 GPIO_ACTIVE_HIGH>;
+	status = "okay";
+};
