ARM: dts: sun8i: add pinmux for V3s mmc1
Allwinner V3s SoC features 3 MMC controllers, mmc0 is used as the
MicroSD slot on Lichee Pi Zero, and on Lichee Pi Zero's dock mmc1 is
also soldered as a MicroSD slot.

Add the pinmux for mmc1, thus we can enable the MicroSD slot on the
Lichee Pi Zero dock.

Signed-off-by: Icenowy Zheng <icenowy@aosc.xyz>

--- a/arch/arm/boot/dts/sun8i-v3s.dtsi
+++ b/arch/arm/boot/dts/sun8i-v3s.dtsi
@@ -245,6 +245,14 @@
 				drive-strength = <30>;
 				bias-pull-up;
 			};
+
+			mmc1_pins: mmc1@0 {
+				pins = "PG0", "PG1", "PG2", "PG3",
+				       "PG4", "PG5";
+				function = "mmc1";
+				drive-strength = <30>;
+				bias-pull-up;
+			};
 		};
 
 		timer@01c20c00 {
